# sandtris_rs

./: Cargo.toml  physics-notes.txt
assets/: font.xcf
src/: blocks.rs  canvas.rs  constants.rs  game.rs  main.rs  pathfinding.rs  physics.rs
