[package]
name = "sandtris_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
enum-map = "2.7.3"
image = { version = "0.24.7", default-features = false }
nanorand = "0.7.0"
ndarray = "0.15.6"
# piston = "0.55.0"
# piston2d-graphics = "0.44.0"
# piston2d-opengl_graphics = "0.83.0"
piston_window = "0.131.0"
# pistoncore-glutin_window = "0.72.0"
